<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_gradient_splash">

    <TextView
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/aux_text1"
        android:text="@string/creare_piggy_bank1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextView.Create"/>

    <TextView
        android:layout_below="@id/aux_text1"
        android:layout_centerHorizontal="true"
        android:id="@+id/aux_text2"
        android:text="@string/creare_piggy_bank2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextView.Create"/>

    <TextView
        android:layout_below="@id/aux_text2"
        android:layout_centerHorizontal="true"
        android:id="@+id/aux_text3"
        android:text="@string/creare_piggy_bank3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextView.Create"/>

    <View
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/sign_in"
        android:background="@drawable/btn_next_step"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:clickable="true"/>

    <RadioGroup
        android:id="@+id/aux_buttons"
        android:layout_below="@id/aux_text3"
        android:layout_above="@id/sign_in"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <RadioButton
            android:id="@+id/amazon_button"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_amazon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:clickable="true"/>

        <RadioButton
            android:id="@+id/ebay_button"
            android:layout_below="@id/amazon_button"
            android:background="@drawable/btn_ebay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:clickable="true"/>
    </RadioGroup>

</RelativeLayout>